vlib/v/checker/tests/like_operator_with_non_string_type_error.vv
struct User {
	id   int    [primary]
	name string
}

fn main() {
	db := ''

	println(sql db {
		select from User where name like 10
	}!)

	println(sql db {
		select from User where 10 like true
	}!)
}
